Implement adding a new case and saving as generated nkoma atoso XML.